show system settings in app list

it's ostensibly still wrong (it's right there in the System area, after all) but
user expectations are near impossible to reshape in this area. *sigh*

BUG:258232