plasma/desktop/applets/kickoff/core/applicationmodel.cpp
@@ -106,7 +106,7 @@ public:
             : q(qq),
               root(new AppNode()),
               duplicatePolicy(ApplicationModel::ShowDuplicatesPolicy),
-              systemApplicationPolicy(ApplicationModel::ShowSystemOnlyPolicy),
+              systemApplicationPolicy(ApplicationModel::ShowApplicationAndSystemPolicy),
               primaryNamePolicy(ApplicationModel::GenericNamePrimary),
               displayOrder(NameAfterDescription),
               allowSeparators(_allowSeparators)
@@ -208,7 +208,7 @@ void ApplicationModelPrivate::fillNode(const QString &_relPath, AppNode *node)
             }
 
             if (systemApplicationPolicy == ApplicationModel::ShowSystemOnlyPolicy &&
-                    systemApplications.contains(service->desktopEntryName())) {
+                systemApplications.contains(service->desktopEntryName())) {
                 // don't duplicate applications that are configured to appear in the System tab
                 // in the Applications tab
                 continue;
